--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,8 +86,11 @@ dependencies {
     implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
 
     // glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    def GLIDE_VERSION = "4.12.0"
+    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
+    implementation "com.github.bumptech.glide:okhttp3-integration:${GLIDE_VERSION}"
+    implementation "com.github.zjupure:webpdecoder:2.0.${GLIDE_VERSION}"
 
     // timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
